--- a/src/scss/_constant.scss
+++ b/src/scss/_constant.scss
@@ -16,3 +16,9 @@ $grey: #999999 !global;
 $outlines: #CCCCCC !global;
 $disabled: #E5E5E5 !global;
 $hover: #F5F5F5 !global;
+
+/* 容器最小宽度 */
+$minWidth: 1200px !global;
+
+/* 主题颜色 */
+$headerColor: #2c3147 !global;
