--- a/src/scss/_constant.scss
+++ b/src/scss/_constant.scss
@@ -6,6 +6,7 @@ $font14: 14px !global;
 $font12: 12px !global;
 
 /* 全局颜色 */
+$white: #FFFFFF !global;
 $primary: #FF74B9 !global;
 $warning: #F6A623 !global;
 $success: #87D068 !global;
@@ -18,7 +19,7 @@ $disabled: #E5E5E5 !global;
 $hover: #F5F5F5 !global;
 
 /* 容器最小宽度 */
-$minWidth: 1200px !global;
+$minWidth: 1240px !global;
 
 /* 主题颜色 */
 $headerColor: #2c3147 !global;
