--- a/src/components/menu/src/style.scss
+++ b/src/components/menu/src/style.scss
@@ -2,52 +2,102 @@
 @import "../../../scss/mixin";
 
 /* 顶部菜单样式 */
-.header {
-  > .container-fluid {
-    .nav {
+.nav {
+  float: left;
+  position: relative;
+  > ul {
+    float: left;
+    li {
       float: left;
-      ul {
-        float: left;
-        li {
-          float: left;
-          font-size: $font18;
-          opacity: 0.5;
-          line-height: $headerHeight;
-          text-align: center;
-          padding: 0px 30px;
-          @include transition(opacity 300ms ease);
-          a {
-            color: $white;
-            position: relative;
-            display: inline-block;
+      font-size: $font18;
+      opacity: 0.5;
+      line-height: $headerHeight;
+      text-align: center;
+      padding: 0px 30px;
+      @include transition(opacity 300ms ease);
+      a {
+        color: $white;
+        position: relative;
+        display: inline-block;
 
-            &:after {
-              @include transition();
-              @include transform(translate(0px, 10px));
-              opacity: 0;
-              content: "";
-              display: block;
-              height: 4px;
-              width: 100%;
-              border-radius: 10px;
-              background-color: $primary;
-              position: absolute;
-              left: 0px;
-              bottom: 12px;
-            }
-          }
-          &:hover {
-            opacity: 1;
-          }
+        &:after {
+          @include transition();
+          @include transform(scale(0));
+          opacity: 0;
+          content: "";
+          display: block;
+          height: 4px;
+          width: 100%;
+          background-color: $primary;
+          position: absolute;
+          left: 0px;
+          bottom: 0px;
         }
-        li.active {
-          opacity: 1;
-          a:after {
-            @include transform(translate(0px, 0px));
-            opacity: 1;
-          }
+      }
+      &:hover {
+        opacity: 1;
+      }
+    }
+    li.active {
+      opacity: 1;
+      a:after {
+        @include transform(scale(1));
+        opacity: 1;
+      }
+    }
+  }
+
+  /* 二级菜单样式 */
+  .second-nav {
+    position: fixed;
+    z-index: 10;
+    left: 0px;
+    top: $headerHeight;
+    width: 100%;
+    background: $white;
+    box-shadow: inset 0 -1px 0 0 $shadow;
+    padding-left: 250px;
+    ul {
+      li {
+        float: left;
+        line-height: $secondNavHeight;
+        font-size: $font16;
+        a {
+          display: block;
+          padding: 0px 20px;
+          color: $base;
+          @include transition(color 300ms ease);
+        }
+        &:hover a,
+        &.active a {
+          color: $primary;
         }
       }
     }
   }
 }
+
+.has-second-nav {
+  > .main {
+    margin-top: $secondNavHeight;
+  }
+}
+
+.header-fixed {
+  > .header {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+  }
+  > .main {
+    margin-top: $headerHeight + 20px;
+  }
+}
+
+.header-fixed.has-second-nav {
+  > .main {
+    margin-top: $headerHeight + $secondNavHeight + 20px;
+  }
+}
+
