--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -196,6 +196,7 @@ $colList: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12;
 
 body > .main {
   margin-top: 20px;
+  @include transition(margin 300ms ease);
   min-width: $minWidth;
   > div {
     padding-top: 20px;
