--- a/example/pages/components/global/color/index.html
+++ b/example/pages/components/global/color/index.html
@@ -7,7 +7,7 @@
 <div class="global-color-page">
   <div class="container" ma-full-container>
     <h2>Color 颜色</h2>
-    <p>定义全局颜色常量</p>
+    <p>定义全局颜色变量</p>
 
     <h3>何时使用</h3>
     <p>在定义自己所开发部分的色值的时候可以引用</p>
