--- a/example/pages/components/global/font/index.html
+++ b/example/pages/components/global/font/index.html
@@ -7,7 +7,7 @@
 <div class="global-font-page">
   <div class="container" ma-full-container>
     <h2>Font 文字</h2>
-    <p>定义全局字号常量</p>
+    <p>定义全局字号变量</p>
 
     <h3>何时使用</h3>
     <p>在定义自己所开发部分的字号的时候可以引用</p>
