--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,233 +1,9 @@
-@import "constant";
+@import "theme";
 @import "reset";
 @import "mixin";
-
-body {
-  font-size: 14px;
-  font-family: "Microsoft YaHei", Helvetica, Arial, sans-serif;
-  line-height: 20px;
-  color: $base;
-  background-color: $background;
-  overflow: auto;
-}
-
-*[ui-view] {
-  position: relative;
-}
-
-.clearfix:after {
-  content: "\200B";
-  display: block;
-  height: 0;
-  clear: both;
-}
-
-.clearfix {
-  *zoom: 1;
-}
-
-.ellipsis {
-  @include ellipsis();
-}
-
-.center {
-  text-align: center;
-}
-
-a {
-  color: $link;
-  text-decoration: none;
-}
-
-*:before, *:after,
-* {
-  box-sizing: border-box;
-}
-
-$paddings: (pb: bottom, pl: left, pt: top, pr: right);
-$margins: (mb: bottom, ml: left, mt: top, mr: right);
-
-@each $header, $size in $paddings {
-  .#{$header}-20 {
-    padding-#{$size}: 20px;
-  }
-}
-
-@each $header, $size in $margins {
-  .#{$header}-20 {
-    margin-#{$size}: 20px;
-  }
-}
-
-@each $header, $size in $paddings {
-  .#{$header}-10 {
-    padding-#{$size}: 10px;
-  }
-}
-
-@each $header, $size in $margins {
-  .#{$header}-10 {
-    margin-#{$size}: 10px;
-  }
-}
-
-@each $header, $size in $paddings {
-  .#{$header}-0 {
-    padding-#{$size}: 0px;
-  }
-}
-
-@each $header, $size in $margins {
-  .#{$header}-0 {
-    margin-#{$size}: 0px;
-  }
-}
-
-$colList: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12;
-@each $col in $colList {
-  .col-#{$col} {
-    float: left;
-    width: (100%/12*$col);
-    min-height: 1px;
-  }
-}
-
-.container-fluid {
-  padding-right: 20px;
-  padding-left: 20px;
-  margin-right: auto;
-  margin-left: auto;
-  float: none;
-}
-
-.form-horizontal {
-
-}
-
-.form-horizontal {
-  .control-label {
-    float: left;
-    width: 160px;
-    padding-top: 7px;
-    font-size: $font14;
-    font-weight: normal;
-    text-align: right;
-  }
-}
-
-.form-horizontal {
-  .controls {
-    margin-left: 180px;
-    position: relative;
-  }
-}
-
-.form-vertical {
-
-}
-
-.form-vertical {
-  .control-label {
-    margin-bottom: 5px;
-  }
-}
-
-.form-horizontal {
-  .controls {
-    position: relative;
-  }
-}
-
-/* 头部 */
-.header {
-  position: relative;
-  z-index: 10;
-  background-color: $headerColor;
-  > .container-fluid {
-    height: $headerHeight;
-    min-width: $minWidth;
-    .logo {
-      display: table;
-      color: $white;
-      float: left;
-      height: 100%;
-      min-width: 200px;
-      font-size: $font18;
-      > div {
-        vertical-align: middle;
-        display: table-cell;
-        > div {
-          float: left;
-          > div {
-            font-size: $font14;
-            padding-bottom: 3px;
-            line-height: 18px;
-          }
-        }
-      }
-      .logo-icon {
-        float: left;
-        margin-right: 10px;
-      }
-    }
-    .info {
-      line-height: $headerHeight;
-      float: right;
-      font-size: $font16;
-      color: $white;
-
-      a {
-        display: inline-block;
-        color: #ffffff;
-      }
-      .nickname {
-        @include ellipsis();
-        display: inline-block;
-        max-width: 100px;
-        vertical-align: top;
-      }
-      .head {
-        display: inline-block;
-        vertical-align: middle;
-        border-radius: 48px;
-        overflow: hidden;
-        width: 48px;
-        height: 48px;
-        margin-right: 20px;
-        position: relative;
-        top: -2px;
-      }
-      .head img {
-        width: 100%;
-        height: auto;
-        vertical-align: top;
-      }
-    }
-  }
-}
-
-body > .main {
-  @include transition(margin 300ms ease);
-  min-width: $minWidth;
-  div.container {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    background-color: $white;
-    box-shadow: 0 0 4px 0 rgba($black, 0.05);
-    border-radius: 5px;
-  }
-}
-
-.header-fixed {
-  > .header {
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-  }
-  > .main {
-    margin-top: $headerHeight;
-  }
-}
+@import "animate";
+@import "layout";
+@import "icons";
+@import "menu";
+@import "crumb";
+@import "input";
