--- a/example/scss/app.scss
+++ b/example/scss/app.scss
@@ -1,4 +1,4 @@
-@import '../../src/scss/constant';
+@import "theme";
 
 h3 {
   font-size: $font18;
@@ -19,6 +19,7 @@ p {
   color: $grey;
   padding-bottom: 30px;
   font-size: $font14;
+  line-height: $font24;
   code {
     display: block;
     border-radius: 5px;
