--- a/example/pages/components/general/icon/index.scss
+++ b/example/pages/components/general/icon/index.scss
@@ -1,4 +1,5 @@
-@import '../../../../scss/theme';
+@import '../../../../../src/scss/theme';
+@import '../../../../../src/scss/mixin';
 
 .general-icon-page {
   .icon-item {
