--- a/example/pages/components/global/color/index.scss
+++ b/example/pages/components/global/color/index.scss
@@ -1,4 +1,5 @@
-@import '../../../../scss/theme';
+@import '../../../../../src/scss/theme';
+@import '../../../../../src/scss/mixin';
 
 .global-color-page {
   .colors{
