--- a/example/pages/components/global/font/index.scss
+++ b/example/pages/components/global/font/index.scss
@@ -1,4 +1,5 @@
-@import '../../../../scss/theme';
+@import '../../../../../src/scss/theme';
+@import '../../../../../src/scss/mixin';
 
 .global-font-page {
   .font {
