--- a/example/pages/components/layout/layout/index.scss
+++ b/example/pages/components/layout/layout/index.scss
@@ -1,4 +1,5 @@
-@import '../../../../scss/theme';
+@import '../../../../../src/scss/theme';
+@import '../../../../../src/scss/mixin';
 
 .layout-layout-page {
   div[class*="col-"] {
