--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -95,7 +95,7 @@
 
 .header-fixed.has-second-nav {
   > .main {
-    margin-top: $headerHeight + $secondNavHeight + 20px;
+    margin-top: $headerHeight + $secondNavHeight;
   }
 }
 
