--- a/example/pages/components/general/icon/index.html
+++ b/example/pages/components/general/icon/index.html
@@ -26,7 +26,7 @@
         <tr>
           <td>ma-type</td>
           <td>设置 icon 类型，按照图标列表名称</td>
-          <td>string</td>
+          <td>String</td>
           <td>-</td>
         </tr>
       </table>
