--- a/example/pages/components/navigation/menu/index.html
+++ b/example/pages/components/navigation/menu/index.html
@@ -4,7 +4,7 @@
   <ma-crumb-item>Font 文字</ma-crumb-item>
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
-<div class="navigation-crumb-page">
+<div class="navigation-menu-page">
   <div class="container" ma-full-container>
     <h2>Menu 菜单</h2>
     <p>为页面和功能提供导航的菜单列表。</p>
@@ -26,18 +26,21 @@
           <th>说明</th>
           <th>类型</th>
           <th>默认值</th>
+          <th>必填</th>
         </tr>
         <tr>
           <td>ma-title</td>
           <td>设置侧边栏菜单标题</td>
           <td>String</td>
           <td>-</td>
+          <td>NO</td>
         </tr>
         <tr>
           <td>ma-routers</td>
           <td>配置菜单内容</td>
           <td>Array</td>
           <td>-</td>
+          <td>YES</td>
         </tr>
       </table>
     </div>
