--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -8,6 +8,25 @@ body {
   overflow: auto;
 }
 
+/* 定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸 */
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background-color: $background;
+}
+
+/* 定义滚动条轨道 内阴影+圆角 */
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: $white;
+}
+
+/* 定义滑块 内阴影+圆角 */
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: $shadow;
+}
+
 *[ui-view] {
   position: relative;
 }
