--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -50,12 +50,20 @@ $disabledOpacity: 0.6;
     padding: 8px 15px;
     font-size: $font16;
     min-width: 100px;
+    .iconfont {
+      font-size: $font16;
+      @include transition();
+    }
   }
 
   &.small {
     padding: 2px 10px;
     font-size: $font12;
     min-width: 70px;
+    .iconfont {
+      font-size: $font12;
+      @include transition();
+    }
   }
 
   &.active,
