步骤条，类型1

--- a/example/pages/components/navigation/tabs/index.html
+++ b/example/pages/components/navigation/tabs/index.html
@@ -28,6 +28,41 @@
       </ma-tabs>
       <code class="mt-20" ng-bind="buttonTabs"></code>
     </div>
+    <h3>API</h3>
+    <h4>ma-tabs</h4>
+    <div class="p">
+      <table>
+        <tr>
+          <th>属性</th>
+          <th>说明</th>
+          <th>类型</th>
+          <th>默认值</th>
+        </tr>
+        <tr>
+          <td>ng-model</td>
+          <td>双向绑定数据</td>
+          <td>String</td>
+          <td>-</td>
+        </tr>
+      </table>
+    </div>
+    <h4>ma-tab, ma-tab-button</h4>
+    <div class="p">
+      <table>
+        <tr>
+          <th>属性</th>
+          <th>说明</th>
+          <th>类型</th>
+          <th>默认值</th>
+        </tr>
+        <tr>
+          <td>ma-value</td>
+          <td>设定对应 tab 所对应的值</td>
+          <td>String</td>
+          <td>-</td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
 
