--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -24,7 +24,7 @@ $base: #323232;
 $grey: #999999;
 $outlines: #CCCCCC;
 $disabled: #E5E5E5;
-$hover: #F5F5F5 !global;
+$hover: #F5F5F5;
 $background: #F5F5F5;
 $shadow: #DDDDDD;
 
