--- a/example/pages/components/data-entry/datepicker/index.html
+++ b/example/pages/components/data-entry/datepicker/index.html
@@ -80,6 +80,18 @@
           <td>String</td>
           <td>-</td>
         </tr>
+        <tr>
+          <td>ma-min-date</td>
+          <td>最小可选时间</td>
+          <td>Date</td>
+          <td>false</td>
+        </tr>
+        <tr>
+          <td>ma-max-date</td>
+          <td>最大可选时间</td>
+          <td>Date</td>
+          <td>false</td>
+        </tr>
       </table>
 
       <h3 class="mt-20">ma-date-range-picker</h3>
@@ -97,8 +109,20 @@
           <td>-</td>
         </tr>
         <tr>
+          <td>ma-min-date</td>
+          <td>最小可选时间</td>
+          <td>Date</td>
+          <td>false</td>
+        </tr>
+        <tr>
+          <td>ma-max-date</td>
+          <td>最大可选时间</td>
+          <td>Date</td>
+          <td>false</td>
+        </tr>
+        <tr>
           <td>ma-config</td>
-          <td>双向绑定 json<a target="_blank" href="http://longbill.github.io/jquery-date-range-picker/">http://longbill.github.io/jquery-date-range-picker/</a></td>
+          <td>双向绑定 json <a target="_blank" href="http://longbill.github.io/jquery-date-range-picker/">http://longbill.github.io/jquery-date-range-picker/</a></td>
           <td>JSON</td>
           <td>-</td>
         </tr>
