--- a/src/components/datepicker/src/maDatePickerTpl.html
+++ b/src/components/datepicker/src/maDatePickerTpl.html
@@ -6,6 +6,8 @@
     view="{{view}}"
     date-change="changeValue"
     min-view="{{minView}}"
+    min-date="minDate"
+    max-date="maxDate"
     format="{{format}}">
   <ma-icon ma-type="calendar"></ma-icon>
   <ma-icon ma-type="close" ma-click="clear()" ng-show="!!model" class="clear"></ma-icon>
