--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -76,6 +76,7 @@ input.ma-input {
   color: $base;
   border-radius: $inputRadius;
   padding: 5px 8px;
+  margin: 0;
   width: 240px;
   max-width: 100%;
   min-height: $inputHeight;
