--- a/src/scss/_spin.scss
+++ b/src/scss/_spin.scss
@@ -4,6 +4,11 @@
    svg {
      vertical-align: top;
    }
+   .gif {
+     background: url(../images/spin/spin.gif) no-repeat center center;
+     background-size: cover;
+     margin: auto;
+   }
  }
 
 .ma-loading {
