--- a/src/scss/_lightgallery.scss
+++ b/src/scss/_lightgallery.scss
@@ -1,1 +1,1 @@
-@import "../../node_modules/lightgallery.js/dist/css/lightgallery.css";
+@import "/node_modules/lightgallery.js/dist/css/lightgallery.css";
