--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/ng-table/bundles/ng-table.min.css";
+@import "/node_modules/ng-table/bundles/ng-table.min.css";
 .ma-table {
   display: block;
   padding-bottom: 52px;
