--- a/src/scss/_datepicker.scss
+++ b/src/scss/_datepicker.scss
@@ -1,4 +1,6 @@
 
+@import '/node_modules/angular-datepicker-custom/dist/angular-datepicker.css';
+
 @mixin inputIcon () {
   display: block;
   @include iconfont();
