--- a/src/scss/_select.scss
+++ b/src/scss/_select.scss
@@ -131,8 +131,8 @@
     height: 100%;
     z-index: 1;
     .ma-dropdown-container .ma-dropdown-item {
-      word-break: break-all;
-      white-space: normal;
+      /* word-break: break-all;*/
+      /* white-space: normal;*/
     }
   }
 }
