--- a/src/components/datepicker/src/maDatePickerTpl.html
+++ b/src/components/datepicker/src/maDatePickerTpl.html
@@ -8,7 +8,7 @@
     min-view="{{minView}}"
     min-date="minDate"
     max-date="maxDate"
-    ma-placeholder="{{maPlaceholder}}"
+    placeholder="{{maPlaceholder}}"
     format="{{format}}">
   <ma-icon ma-type="calendar"></ma-icon>
   <ma-icon ma-type="close" ma-click="clear()" ng-show="!!model" class="clear"></ma-icon>
