--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -85,6 +85,14 @@ body {
   text-align: center;
 }
 
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
 .fl {
   float: left;
 }
