--- a/example/pages/components/feedback/alert/index.html
+++ b/example/pages/components/feedback/alert/index.html
@@ -24,6 +24,7 @@
         $scope.alertItems = [{
           type: 'success',
           text: '成功提示框，主要用来显示成功信息。',
+          close: false,
         }, {
           type: 'danger',
           text: '危险提示框，主要用来显示错误信息。',
