form 加提示文字样式

--- a/example/pages/components/data-entry/form/index.html
+++ b/example/pages/components/data-entry/form/index.html
@@ -47,6 +47,7 @@
                 ng-disabled="disabled"
                 validator="required"
                 valid-method="submit"></ma-input>
+              <span class="control-tip">我是提示文本</span>
             </div>
           </div>
           <div class="control-group">
