--- a/example/pages/components/data-display/tooltip/index.html
+++ b/example/pages/components/data-display/tooltip/index.html
@@ -5,35 +5,76 @@
 </ma-crumb> -->
 <ma-crumb-auto></ma-crumb-auto>
 <div class="data-display-tooptip-page">
-  <div class="container" ma-full-container>
+  <div class="container"
+    ma-full-container>
     <h2>Tooltip 文字提示</h2>
     <p>
-     鼠标移入则显示提示，移出消失，气泡浮层不承载复杂文本和操作。<br/>
-     可用来代替系统默认的 title 提示，提供一个按钮/文字/操作的文案解释。
+      鼠标移入则显示提示，移出消失，气泡浮层不承载复杂文本和操作。
+      <br/> 可用来代替系统默认的 title 提示，提供一个按钮/文字/操作的文案解释。
     </p>
     <h3>代码演示</h3>
     <div class="p clearfix pt-20">
 
       <div class="col-12 center buttons">
         <div class="col-24">
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="tl">TL</div></ma-button>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="tc">TC</div></ma-button>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="tr">TR</div></ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="tl">TL</div>
+          </ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="tc">TC</div>
+          </ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="tr">TR</div>
+          </ma-button>
         </div>
         <div class="col-12">
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="lt">LT</div></ma-button><br/>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="lc">LC</div></ma-button><br/>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="lb">LB</div></ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="lt">LT</div>
+          </ma-button>
+          <br/>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="lc">LC</div>
+          </ma-button>
+          <br/>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="lb">LB</div>
+          </ma-button>
         </div>
         <div class="col-12">
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="rt">RT</div></ma-button><br/>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="rc">RC</div></ma-button><br/>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="rb">RB</div></ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="rt">RT</div>
+          </ma-button>
+          <br/>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="rc">RC</div>
+          </ma-button>
+          <br/>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="rb">RB</div>
+          </ma-button>
         </div>
         <div class="col-24">
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="bl">BL</div></ma-button>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="bc">BC</div></ma-button>
-          <ma-button><div ma-tooltip="{{tipText}}" ma-direction="br">BR</div></ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="bl">BL</div>
+          </ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="bc">BC</div>
+          </ma-button>
+          <ma-button>
+            <div ma-tooltip="{{tipText}}"
+              ma-direction="br">BR</div>
+          </ma-button>
         </div>
       </div>
     </div>
