--- a/example/pages/components/data-entry/form/index.html
+++ b/example/pages/components/data-entry/form/index.html
@@ -17,7 +17,9 @@
     <h3>代码演示</h3>
     <div class="p clearfix">
       <div class="mb-20">
-        表单验证依赖：<a href="https://github.com/hueitan/angular-validation">https://github.com/hueitan/angular-validation</a>
+        表单验证依赖：
+        <a target="_blank"
+          href="https://github.com/hueitan/angular-validation">https://github.com/hueitan/angular-validation</a>
       </div>
       <div class="col-24">
         <div class="mb-20">
