--- a/src/components/tabs/src/maTabTpl.html
+++ b/src/components/tabs/src/maTabTpl.html
@@ -1,6 +1,7 @@
-<div
-  class="ma-tab"
-  ng-class="{active: parentScope.model == value}"
-  ma-click="parentScope.model = value"
-  ng-transclude>
+<div class="ma-tab"
+  ng-class="{active: parentScope.model == value}">
+  <div ma-click="parentScope.model = value"
+    ng-transclude>
+
+  </div>
 </div>
