添加app.scss 颜色class

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -7,6 +7,22 @@ body {
   overflow: auto;
 }
 
+.danger {
+  color: $danger;
+}
+
+.success {
+  color: $success;
+}
+
+.warning {
+  color: $warning;
+}
+
+.primary {
+  color: $primary;
+}
+
 
 /* 定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸 */
 
